new SV filtering Added annotations which can be used for filtering. This resulted in a renaming of file from filterPonSVs.R -> annotPoNSVs. New file added for filterToolSVs.R that handles the following: - tool(s) supporting the SV - copy number overlap was reworked and recategorized for 'support' column - added filter column - KEEP status included to assist filtering

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -11,7 +11,8 @@ bxRescue_script:  code/barCodeOverlap.R
 combineSVCN_script:  code/combineSVABA-GROCSVS-TITAN.R
 getLRsomaticSV_script:  code/getLongRangerSomaticSV.R
 buildPoN_script:  code/buildGermlineSVPoN.R
-filterPoNSV_script: code/filterPoNSVs.R
+annotPoNSV_script:  code/annotPoNSVs.R
+filterSVs_script: code/filterToolSVs.R
 plotSVCN_script:  code/plotTitanSvaba.R
 plotCircos_script: code/create_circosPlot.R
 
