--- a/config/samples.yaml
+++ b/config/samples.yaml
@@ -1,9 +1,9 @@
-samples:
-  tumor1:  /filepath/tumor1.bam
-  normal1:  /filepath/normal1.bam
-  tumor2:  /filepath/tumor2.bam
-  normal2:  /filepath/normal2.bam
+samples: #format is sample_name: /path/to/sample.bam for both tumors and normals
+  tumor_sample_name1:  /path/to/tumor/sample1.bam
+  tumor_sample_name2:  /path/to/tumor/sample2.bam
+  normal_sample_name1:  /path/to/normal/sample1.bam
+  normal_sample_name2:  /path/to/normal/sample2.bam
 
-pairings: #format is tumor_name: normal_name
-  tumor1:  normal1
-  tumor2:  normal2
+pairings: #format is tumor: matched_normal
+  tumor_sample_name1: normal_sample_name1
+  tumor_sample_name2: normal_sample_name2
